--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
-   <script src="/index.js"></script>
+   <script src="Dome.js"></script>
 <label for="pet selection">select a pet</label>
 <select name="selection" id="pet">
     <option value="dog">dog</option>
